--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "scripts": {
     "dev": "NODE_OPTIONS=--openssl-legacy-provider next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "build": "NODE_OPTIONS=--openssl-legacy-provider next build",
+    "start": "NODE_OPTIONS=--openssl-legacy-provider next start",
+    "lint": "NODE_OPTIONS=--openssl-legacy-provider next lint"
   },
   "dependencies": {
+    "@parse/react-ssr": "^0.0.1-alpha.18",
     "next": "11.0.1",
+    "parse": "^5.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
